# Home_Work_Web_14

./: LICENSE  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 03d2c8aaaf54_init.py  4ab2c51126cc_init.py
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/5/: 1247  1249  1259  16388  16391  16393  16394  16399  16400  16402  16404  16410  16411  16418  16419  16420  16421  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  (+6 more)
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  cloud_image.py  email.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
